syntax = "proto3";

package coolercontrol.models.v1;

import "coolercontrol/models/v1/channel_extension_name.proto";

message SpeedOptions {
  // The minimum fan duty for this speed channel
  uint32 min_duty = 1;

  // The maximum fan duty for this speed channel
  uint32 max_duty = 2;

  // True if manual fixed fan speed control is supported;
  // if false, speeds are read-only (monitoring only).
  bool fixed_enabled = 3;

  // If present, then this channel has special settings that are applicable.
  optional ChannelExtensionName extension = 4;
}
